# browser-automation

./: .env.example  .gitignore  BUILD.md  PLATFORMS.md  QUICK_START.md  README.md  WINDOWS_BUILD.md  browser-automation.spec  build.bat  build.py  build.sh  check_dependencies.py  create_icon.py  pyproject.toml  requirements.txt
.continue/rules/: code.md  nocommentsincode.md  usetools.md
cache/: sessions.json
sessions/fast.funnne/: session.json
src/browser_automation/: __init__.py  actions.py  automation.py  automation_worker.py  camoufox_launcher.py  gui_main.py  gui_modern.py  main.py  profile_repository.py  server.py  test_instagram_api.py  value_objects.py
src/browser_automation/proxy/: __init__.py  base.py  vless.py
